# kontomire

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/config/: imgui.ini
assets/shaders/: basic-texture.glsl  flat-color.glsl
assets/shaders/render2d/: circle.glsl  line.glsl  quad.glsl
demo/: README.md
demo/src/: application.h  imgui_manager.cc  imgui_manager.h  main.cc  window.cc  window.h
demo/src/layer/: layer.h  opengl.h  test.h
demo/src/layers/: opengl.h
include/: application.h  imgui_manager.h  kontomire.h  layer.h  window.h
include/kontomire/core/: application.h  buffer.h  camera.h  framebuffer.h  layer.h  renderAPI.h  renderer.h  renderer2d.h  shader.h  texture.h  vertex_arrays.h  window.h
include/kontomire/core/layers/: opengl.h  test.h
include/kontomire/platform/: platform.h
include/kontomire/platform/opengl/: buffer.h  framebuffer.h  renderAPI.h  shader.h  texture.h  vertex_arrays.h
include/kontomire/renderer/: buffer.h  framebuffer.h  renderAPI.h  renderer2d.h  vertex_arrays.h
include/layers/: test.h
include/platform/opengl/: buffer.h  framebuffer.h  vertex_arrays.h
playground/src/: application.h
playground/src/layer/: layer.h
src/: imgui_manager.cc  imgui_manager.cpp  main.cc  window.cc  window.cpp
src/kontomire/core/: buffer.cc  framebuffer.cc  renderAPI.cc  renderer.cc  renderer2d.cc  shader.cc  texture.cc  vertex_arrays.cc
src/kontomire/platform/opengl/: buffer.cc  framebuffer.cc  renderAPI.cc  shader.cc  texture.cc  vertex_arrays.cc
src/kontomire/renderer/: buffer.cc  framebuffer.cc  renderAPI.cc  renderer2d.cc  vertex_arrays.cc
src/platform/opengl/: buffer.cc  framebuffer.cc  renderAPI.cc  vertex_arrays.cc
src/playground/: application.cc  application.h  imgui_manager.cc  window.cc  window.h
src/playground/graphics/: context.cc  context.h
src/playground/graphics/opengl/: context.cc  context.h
src/playground/layer/: demo.h  layer.cc  layer.h  opengl.h  test.h
